tests/errors/phpdoc_var_without_name.php
<?php

declare(strict_types=1);

class Hello
{
    /**
     * @var int $foo
     */
    public $foo;
}
